--- a/static/css/arraypage.css
+++ b/static/css/arraypage.css
@@ -1,6 +1,6 @@
 html body {
     margin: 0;
-    font-size: 16px;
+    /*font-size: 16px;*/
     /*font-family: "微软雅黑", serif;*/
     color: #FFFFFF;
     background-color: pink;
@@ -26,40 +26,50 @@ html body {
 
 #bottom_toolbar {
     position: absolute;
-    background: #4d4545;
+    background: #323232;
     bottom: 0;
     left: 15%;
     width: 85%;
     height: 5%;
 }
 
-#play_bt{
+#play_bt {
     position: absolute;
-    background: darkred;
+    background-size:100%;
     top: 20%;
     left: 10%;
     width: 2%;
     height: 60%;
 }
+.play{
+    background-image: url(../img/play.png);
+}
+.pause{
+    background-image: url(../img/pause.png);
+}
 
-#next_bt{
+#next_bt {
     position: absolute;
-    background: gold;
+    background-image: url(../img/next.png);
+    background-size: 100%;
     top: 20%;
     left: 15%;
     width: 2%;
     height: 60%;
 }
 
-#progress{
+#progress {
     position: absolute;
-    background: steelblue;
-    top: 25%;
-    left: 25%;
+    background: lightgray;
+    top: 40%;
+    left: 22%;
     width: 50%;
-    height: 50%;
+    height: 20%;
 }
 
+#progress svg{
+    position: absolute;
+}
 #screen {
     position: absolute;
     background: #FFFFFF;
@@ -71,8 +81,7 @@ html body {
     height: 90%;
 }
 
-
-#input_window{
+#input_window {
     position: absolute;
     top: 1%;
     right: 0;
@@ -81,7 +90,7 @@ html body {
 }
 
 /*输入窗口*/
-#input_page{
+#input_page {
     position: absolute;
     background: #7c7575;
     width: 85%;
@@ -93,38 +102,44 @@ html body {
 /*输入控件*/
 #custom_tool {
     position: absolute;
-    top:15%;
+    top: 15%;
     left: 10%;
 }
 
-#hide_page{
+#hide_page {
     position: absolute;
     width: 15%;
     height: 100%;
     right: 0;
     background: #524c4c;
 }
+
 /*隐藏按钮*/
-#hide_bt {
+#hide_bt1 {
     position: absolute;
-    width: 30%;
-    height: 15%;
-    top: 43%;
-    left: 35%;
-    background: #669999;
-    border-radius: 50%;
+    width: 40%;
+    height: 20%;
+    top: 40%;
+    left: 30%;
+    background-size:100%;
 }
-#hide_bt:hover{
+.hide_right{
+     background-image: url(../img/right.png);
+}
+.hide_left{
+    background-image: url(../img/left.png);
+}
+#hide_bt1:hover {
     position: absolute;
-    width: 50%;
-    height: 25%;
-    top: 37%;
-    left: 25%;
+    width: 60%;
+    height: 30%;
+    top: 35%;
+    left: 20%;
 }
 
 /*输入文本框*/
-.inputs{
-     width: 30%;
+.inputs {
+    width: 30%;
 }
 
 /*按钮*/
@@ -140,21 +155,95 @@ html body {
     font-size: 5px;
 }
 
-
-#annotation_words{
+/*提示窗口*/
+#hint_page {
     position: absolute;
-    background: #455d7a;
     bottom: 29%;
     right: 0;
     width: 23%;
     height: 8%;
 }
 
-#annotation_code{
+#hint_window {
     position: absolute;
-    background: #233142;
+    background: #aacfd0;
+    font-weight: bold;
+    font-family: "KaiTi", serif;
+    font-size: 18px;
+    left: 0;
+    top: 0;
+    width: 85%;
+    height: 100%;
+}
+
+#hint_hide {
+    position: absolute;
+    background: #79a8a9;
+    right: 0;
+    top: 0;
+    width: 15%;
+    height: 100%;
+}
+
+#hide_bt2 {
+    position: absolute;
+    width: 30%;
+    height: 25%;
+    top: 37%;
+    left: 35%;
+    background-size:100%;
+}
+
+#hide_bt2:hover {
+    position: absolute;
+    width: 55%;
+    height: 50%;
+    top: 25%;
+    left: 22%;
+}
+
+/*算法窗口*/
+#code_page {
+    position: absolute;
     bottom: 1%;
     right: 0;
     width: 23%;
     height: 27%;
+}
+
+#code_window {
+    position: absolute;
+    background: #7f4a88;
+    font: italic 2em Georgia, serif;
+    font-weight: normal;
+    left: 0;
+    top: 0;
+    width: 85%;
+    height: 100%;
+}
+
+#code_hide {
+    position: absolute;
+    background: #4a266a;
+    right: 0;
+    top: 0;
+    width: 15%;
+    height: 100%;
+}
+
+#hide_bt3 {
+    position: absolute;
+    width: 50%;
+    height: 13%;
+    top: 45%;
+    left: 25%;
+    background-size:100%;
+}
+
+#hide_bt3:hover {
+    position: absolute;
+    width: 70%;
+    height: 18%;
+    top: 41%;
+    left: 15%;
 }
