--- a/templates/ArrayPage.html
+++ b/templates/ArrayPage.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>ArrayPage</title>
-
     <link rel="stylesheet" href="../static/css/arraypage.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -18,7 +17,7 @@
                 <li class="s-firstItem first">
                     <a href="/">
                         <i class="fa fa-home"></i>
-                        <span>AlgorithmVisual</span>
+                        <span>AlgorithmVis</span>
                     </a>
                 </li>
 
@@ -178,13 +177,13 @@
         </div>
     </div>
     <div id="bottom_toolbar">
-        <div id= "play_bt">播放</div>{#播放暂停#}
+        <div id= "play_bt" class = "play"></div>{#播放暂停#}
         <div id="next_bt"></div> {#步进#}
         <div id="progress"></div> {#进度条#}
     </div>
     <div id="top_toolbar"></div>
     <div id="screen">
-        <div id="input_window">
+        <div id="input_window"> {#输入窗口#}
             <div id="input_page">
                 <div id="custom_tool">
                     <span>数组 :</span>
@@ -202,12 +201,23 @@
                     <br>
                 </div>
             </div>
-            <div id="hide_page">{#隐藏按钮#}
-                <div id="hide_bt"></div>
+            <div id="hide_page">
+                {#隐藏按钮#}
+                <div id="hide_bt1" class = "hide_right"></div>
             </div>
         </div>
-        <div id="annotation_words"></div>
-        <div id="annotation_code"></div>
+        <div id="hint_page">{#解释窗口#}
+            <div id="hint_window"></div>
+            <div id="hint_hide">
+                <div id="hide_bt2" class = "hide_right"></div>
+            </div>
+        </div>
+        <div id="code_page"> {#伪代码窗口#}
+            <div id="code_window"></div>
+            <div id="code_hide">
+                <div id="hide_bt3" class = "hide_right"></div>
+            </div>
+        </div>
     </div>
 </div>
 
