--- a/templates/ArrayPage.html
+++ b/templates/ArrayPage.html
@@ -34,17 +34,11 @@
                                 <span>数组</span>
                             </a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
+                        <li class="s-secondItem">
+                            <a href="/link_page">
                                 <i class="fa fa-minus-square-o"></i>
                                 <span>链表</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                            </a>
                         </li>
                         <li>
                             <div class="d-secondNav s-secondNav">
@@ -177,13 +171,15 @@
         </div>
     </div>
     <div id="bottom_toolbar">
+        <!--顶部功能栏-->
         <div id= "play_bt" class = "play"></div>{#播放暂停#}
         <div id="next_bt"></div> {#步进#}
         <div id="progress"></div> {#进度条#}
     </div>
     <div id="top_toolbar"></div>
     <div id="screen">
-        <div id="input_window"> {#输入窗口#}
+        <div id="input_window">
+             {#输入窗口#}
             <div id="input_page">
                 <div id="custom_tool">
                     <span>数组 :</span>
@@ -206,13 +202,15 @@
                 <div id="hide_bt1" class = "hide_right"></div>
             </div>
         </div>
-        <div id="hint_page">{#解释窗口#}
+        <div id="hint_page">
+            {#解释窗口#}
             <div id="hint_window"></div>
             <div id="hint_hide">
                 <div id="hide_bt2" class = "hide_right"></div>
             </div>
         </div>
-        <div id="code_page"> {#伪代码窗口#}
+        <div id="code_page">
+             {#伪代码窗口#}
             <div id="code_window"></div>
             <div id="code_hide">
                 <div id="hide_bt3" class = "hide_right"></div>
