4/12 linkpage to do: delet function

--- a/templates/LinkPage.html
+++ b/templates/LinkPage.html
@@ -64,12 +64,6 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="s-secondItem">
-                            <a href="/test">
-                                <i class="fa fa-minus-square-o"></i>
-                                <span>第二页</span>
-                            </a>
-                        </li>
                     </ul>
                 </li>
                 <li class="first">
@@ -193,9 +187,13 @@
                     <input type="text" placeholder="想要查找的数" class="inputs" id="search_num" value="">
                     <button class="button" id="search_bt">查找</button>
                     <br>
-                    <span>修改 :</span>
-                    <input type="text" placeholder="数组下标,值" class="inputs" id="change_num" value="">
-                    <button class="button" id="change_bt">修改</button>
+                    <span>插入 :</span>
+                    <input type="text" placeholder="位置,值" class="inputs" id="insert_num" value="">
+                    <button class="button" id="insert_bt">插入</button>
+                    <br>
+                    <span>移除 :</span>
+                    <input type="text" placeholder="位置" class="inputs" id="delete_num" value="">
+                    <button class="button" id="delete_bt">移除</button>
                     <br>
                 </div>
             </div>
