--- a/static/css/arraypage.css
+++ b/static/css/arraypage.css
@@ -36,6 +36,7 @@ html body {
 #play_bt {
     position: absolute;
     background-size:100%;
+    background-repeat: no-repeat;
     top: 20%;
     left: 10%;
     width: 2%;
@@ -50,7 +51,7 @@ html body {
 
 #next_bt {
     position: absolute;
-    background-image: url(../img/next.png);
+    background: url(../img/next.png) no-repeat;
     background-size: 100%;
     top: 20%;
     left: 15%;
@@ -65,6 +66,8 @@ html body {
     left: 22%;
     width: 50%;
     height: 20%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 #progress svg{
@@ -97,6 +100,7 @@ html body {
     height: 100%;
     top: 0;
     left: 0;
+    overflow:auto;
 }
 
 /*输入控件*/
@@ -122,6 +126,7 @@ html body {
     top: 40%;
     left: 30%;
     background-size:100%;
+    background-repeat: no-repeat;
 }
 .hide_right{
      background-image: url(../img/right.png);
@@ -192,6 +197,7 @@ html body {
     top: 37%;
     left: 35%;
     background-size:100%;
+    background-repeat: no-repeat;
 }
 
 #hide_bt2:hover {
@@ -238,6 +244,7 @@ html body {
     top: 45%;
     left: 25%;
     background-size:100%;
+    background-repeat: no-repeat;
 }
 
 #hide_bt3:hover {
