--- a/static/css/linkpage.css
+++ b/static/css/linkpage.css
@@ -34,6 +34,7 @@ html body {
 #play_bt {
     position: absolute;
     background-size:100%;
+    background-repeat: no-repeat;
     top: 20%;
     left: 10%;
     width: 2%;
@@ -48,7 +49,7 @@ html body {
 
 #next_bt {
     position: absolute;
-    background-image: url(../img/next.png);
+    background: url(../img/next.png) no-repeat;
     background-size: 100%;
     top: 20%;
     left: 15%;
@@ -63,6 +64,8 @@ html body {
     left: 22%;
     width: 50%;
     height: 20%;
+    border-radius: 10px;
+    overflow:hidden;
 }
 
 #progress svg{
@@ -95,12 +98,13 @@ html body {
     height: 100%;
     top: 0;
     left: 0;
+    overflow:auto;
 }
 
 /*输入控件*/
 #custom_tool {
     position: absolute;
-    top: 15%;
+    top: 10%;
     left: 10%;
 }
 
@@ -120,6 +124,7 @@ html body {
     top: 40%;
     left: 30%;
     background-size:100%;
+    background-repeat: no-repeat;
 }
 .hide_right{
      background-image: url(../img/right.png);
@@ -190,6 +195,7 @@ html body {
     top: 37%;
     left: 35%;
     background-size:100%;
+    background-repeat: no-repeat;
 }
 
 #hide_bt2:hover {
@@ -236,6 +242,7 @@ html body {
     top: 45%;
     left: 25%;
     background-size:100%;
+    background-repeat: no-repeat;
 }
 
 #hide_bt3:hover {
