--- a/templates/LinkPage.html
+++ b/templates/LinkPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LinkedListPage</title>
+    <title>链表</title>
     <link rel="stylesheet" href="../static/css/linkpage.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
