--- a/templates/LinkPage.html
+++ b/templates/LinkPage.html
@@ -40,29 +40,17 @@
                                 <span>链表</span>
                             </a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
+                        <li class="s-secondItem">
+                            <a href="/stack_page">
                                 <i class="fa fa-minus-square-o"></i>
                                 <span>栈</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                            </a>
                         </li>
-                        <li>
-                            <div class="d-secondNav s-secondNav">
+                        <li class="s-secondItem">
+                            <a href="#">
                                 <i class="fa fa-minus-square-o"></i>
                                 <span>队列</span>
-                                <i class="fa fa-caret-right fr "></i>
-                            </div>
-                            <ul class="d-secondDrop s-secondDrop">
-                                <li class="s-thirdItem">
-                                    <a href="#">三级导航</a>
-                                </li>
-                            </ul>
+                            </a>
                         </li>
                     </ul>
                 </li>
