--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -48,7 +48,7 @@
                             </a>
                         </li>
                         <li class="s-secondItem">
-                            <a href="#">
+                            <a href="/queue_page">
                                 <i class="fa fa-minus-square-o"></i>
                                 <span>队列</span>
                             </a>
