--- a/templates/StackPage.html
+++ b/templates/StackPage.html
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li class="s-secondItem">
-                            <a href="#">
+                            <a href="/queue_page">
                                 <i class="fa fa-minus-square-o"></i>
                                 <span>队列</span>
                             </a>
