--- a/templates/ArrayPage.html
+++ b/templates/ArrayPage.html
@@ -80,7 +80,7 @@
                     <ul class="d-firstDrop s-firstDrop">
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">折半查找</a>
+                            <a href="/bisearch_page">折半查找</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
@@ -204,6 +204,7 @@
 
 <script type="text/javascript" src="../static/lib/d3/d3.js"></script>
 <script type="text/javascript" src="../static/lib/jquery/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="../static/js/TOOL.js"></script>
 <script type="text/javascript" src="../static/js/arraypage.js"></script>
 <script type="text/javascript" src="../static/js/navigation.js"></script>
 </html>
