--- a/templates/LinkPage.html
+++ b/templates/LinkPage.html
@@ -80,7 +80,7 @@
                     <ul class="d-firstDrop s-firstDrop">
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">折半查找</a>
+                            <a href="/bisearch_page">折半查找</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
