--- a/templates/LinkPage.html
+++ b/templates/LinkPage.html
@@ -210,6 +210,7 @@
 
 <script type="text/javascript" src="../static/lib/d3/d3.js"></script>
 <script type="text/javascript" src="../static/lib/jquery/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="../static/js/TOOL.js"></script>
 <script type="text/javascript" src="../static/js/linkpage.js"></script>
 <script type="text/javascript" src="../static/js/navigation.js"></script>
 </html>
