--- a/templates/QueuePage.html
+++ b/templates/QueuePage.html
@@ -205,6 +205,7 @@
 
 <script type="text/javascript" src="../static/lib/d3/d3.js"></script>
 <script type="text/javascript" src="../static/lib/jquery/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="../static/js/TOOL.js"></script>
 <script type="text/javascript" src="../static/js/queuepage.js"></script>
 <script type="text/javascript" src="../static/js/navigation.js"></script>
 </html>
