--- a/templates/HashPage.html
+++ b/templates/HashPage.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>折半查找</title>
-    <link rel="stylesheet" href="../static/css/bisearchpage.css">
+    <title>哈希表</title>
+    <link rel="stylesheet" href="../static/css/hashpage.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
 </head>
@@ -166,7 +166,7 @@
             <div id="input_page">
                 <div id="custom_tool">
                     <span>创建 :</span>
-                    <input type="text" placeholder="数组(升序)" class="inputs" id="user_data" value="">
+                    <input type="text" placeholder="数组" class="inputs" id="user_data" value="">
                     <button class="button" id="submit_bt">创建</button>
                     <button class="button" id="random_bt">随机</button>
                     <br>
@@ -202,6 +202,6 @@
 <script type="text/javascript" src="../static/lib/d3/d3.js"></script>
 <script type="text/javascript" src="../static/lib/jquery/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="../static/js/TOOL.js"></script>
-<script type="text/javascript" src="../static/js/bisearchpage.js"></script>
+<script type="text/javascript" src="../static/js/hashpage.js"></script>
 <script type="text/javascript" src="../static/js/navigation.js"></script>
 </html>
