--- a/templates/LinkPage.html
+++ b/templates/LinkPage.html
@@ -84,7 +84,7 @@
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
-                            <a href="#">哈希表</a>
+                            <a href="/hash_page">哈希表</a>
                         </li>
                         <li class="s-secondItem">
                             <i class="fa fa-minus-square-o"></i>
